--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,24 +11,24 @@
     <h1>Owners and Pets</h1>
     <form id="owner-reg-form">
       <h2>Owner Registration</h2>
-      <label for="first-name">First Name:</label>
-      <input type="text" id="first-name" name="first-name" />
-      <label for="last-name">Last Name:</label>
-      <input type="text" id="last-name" name="last-name" />
+      <label for="firstName">First Name:</label>
+      <input type="text" id="firstName" name="firstName" />
+      <label for="lastName">Last Name:</label>
+      <input type="text" id="lastName" name="lastName" />
       <button id="register-btn">Register</button>
     </form>
     <form id="pets-form">
       <h2>Pets</h2>
-      <label for="owner-name">Owner Name:</label>
-      <select id="owner-drop-down" name="owner">
+      <label for="ownerName">Owner Name:</label>
+      <select id="owner-drop-down" name="ownerName">
         <option value="drop-down-test">Test</option>
       </select>
-      <label for="pet-name">Pet Name:</label>
-      <input type="text" id="pet-name" name="pet-name" />
-      <label for="pet-breed">Breed:</label>
-      <input type="text" id="pet-breed" name="pet-breed" />
-      <label for="pet-color">Color:</label>
-      <input type="text" id="pet-color" name="pet-color" />
+      <label for="petName">Pet Name:</label>
+      <input type="text" id="petName" name="petName" />
+      <label for="petBreed">Breed:</label>
+      <input type="text" id="petBreed" name="petBreed" />
+      <label for="petColor">Color:</label>
+      <input type="text" id="petColor" name="petColor" />
       <button id="add-pet-btn">Add Pet</button>
     </form>
     <table id="data-table-container">
